# ITMO_Programming_2sem

Lab1/: Polynomial.cpp  Polynomial.h  lab1.1.cpp  lab1.2.cpp  main.cpp  shapes.cpp  shapes.h
Lab2/: lab2.cpp
Lab3/: algorithms.hpp  circular buffer.hpp  main.cpp
Lab4/: Corners.cpp  Cube.cpp  Cube.h  Edges.cpp  Rotation.cpp  RubikCube.cpp  RubikCube.h  Validation.cpp  main.cpp  Сombinations.cpp
Lab5/: Allocator.hpp  Block.cpp  FreeChanks.cpp  main.cpp
Lab6/: CMakeLists.txt  Polynomial.cpp  main.cpp
